testcases/error/missing_default_argument.veryl
module missing_default_argument #(
    param A: u32,
) {}
